# src/controller/rolePermission.js
@@ -1,6 +1,7 @@
 import {
   getRolePermissionService,
   getRolePermissionByIdService,
+  getRolePermissionByRoleIdService,
   createRolePermissionService,
   updateRolePermissionService,
   deleteRolePermissionService,
@@ -13,7 +14,7 @@ const getRolePermission = async (req, res) => {
     const rolePermission = await getRolePermissionService();
     if (rolePermission.length === 0) {
       return res
-        .status(400)
+        .status(200)
         .json({ message: "No se encontraron roles-permisos" });
     }
 
@@ -37,11 +38,13 @@ const createRolePermission = async (req, res) => {
     }
 
     // Verifica si el permiso con el ID proporcionado existe
-    const permissionExist = await getPermissionByIdService(id_permission);
-    if (!permissionExist) {
-      return res
-        .status(400)
-        .json({ message: "El permiso con el ID proporcionado no existe" });
+    for (const permissionId of id_permission) {
+      const permissionExist = await getPermissionByIdService(permissionId);
+      if (!permissionExist) {
+        return res
+          .status(400)
+          .json({ message: `El permiso con el ID ${permissionId} no existe!` });
+      }
     }
 
     await createRolePermissionService(id_role, id_permission);
@@ -56,11 +59,9 @@ const getRolePermissionById = async (req, res) => {
   try {
     const rolePermission = await getRolePermissionByIdService(id);
     if (!rolePermission) {
-      return res
-        .status(200)
-        .json({
-          message: "No se encontró el rol-permiso con el ID proporcionado",
-        });
+      return res.status(200).json({
+        message: "No se encontró el rol-permiso con el ID proporcionado",
+      });
     }
 
     res.status(200).json(rolePermission);
@@ -71,9 +72,34 @@ const getRolePermissionById = async (req, res) => {
   }
 };
 
+const getRolePermissionByRoleId = async (req, res) => {
+  const { id } = req.params; // ID of role
+  try {
+    const roleExist = await getRoleByIdService(id);
+    if (!roleExist) {
+      return res
+        .status(400)
+        .json({ message: "El rol con el ID proporcionado no existe" });
+    }
+
+    const rolePermission = await getRolePermissionByRoleIdService(id);
+    if (rolePermission.length === 0) {
+      return res
+        .status(200)
+        .json({ message: "No se encontraron roles-permisos para el rol" });
+    }
+
+    res.status(200).json(rolePermission);
+  } catch (error) {
+    res
+      .status(500)
+      .json({ error: "Error en el servidor al obtener los roles-permisos" });
+  }
+};
+
 const updateRolePermission = async (req, res) => {
   const { id } = req.params;
-  const rolePermission = req.body;
+  const { id_role, id_permission } = req.body;
   try {
     // Verifica si el rol con el ID proporcionado existe
     const roleExist = await getRoleByIdService(id_role);
@@ -91,7 +117,7 @@ const updateRolePermission = async (req, res) => {
         .json({ message: "El permiso con el ID proporcionado no existe" });
     }
 
-    await updateRolePermissionService(id, rolePermission);
+    await updateRolePermissionService(id, id_role, id_permission);
     res.status(200).json({ result: "Rol-Permiso actualizado correctamente!" });
   } catch (error) {
     res.status(500).json({ error: error.message });
@@ -120,6 +146,7 @@ const deleteRolePermission = async (req, res) => {
 export {
   getRolePermission,
   getRolePermissionById,
+  getRolePermissionByRoleId,
   createRolePermission,
   updateRolePermission,
   deleteRolePermission,
