# src/router/rolePermission.js
@@ -1,5 +1,5 @@
 import { Router } from "express";
-import { getRolePermission, getRolePermissionById, createRolePermission, updateRolePermission, deleteRolePermission } from "../controller/rolePermission.js";
+import { getRolePermission, getRolePermissionById, getRolePermissionByRoleId, createRolePermission, updateRolePermission, deleteRolePermission } from "../controller/rolePermission.js";
 
 const routerRolePermission = Router();
 
@@ -8,6 +8,8 @@ routerRolePermission.get("/rolePermission", getRolePermission);
 routerRolePermission.post("/rolePermission", createRolePermission);
 
 routerRolePermission.get("/rolePermission/:id", getRolePermissionById);
+
+routerRolePermission.get("/rolePermission/role/:id", getRolePermissionByRoleId);
 
 routerRolePermission.put("/rolePermission/:id", updateRolePermission);
 
